# ChipControlDemo

./: .gitignore  CMakeLists.txt  ChipControl_Architecture.drawio  MyProjectTests  README.md  Untitled Diagram.drawio  build.sh  dockerfile
src/: CMakeLists.txt  main.c  target
src/ChipControl/: ChipControl.c  ChipControl.h
src/Drivers/: LCT2943.h  LTC2943.c  LTC2943.h
test/: CMakeLists.txt  ChipControl_Get_ADC_Mode.c  ChipControl_Get_Charge_Status.c  ChipControl_Get_Temp_Status.c  ChipControl_Set_ADC_Mode.c  ChipControl_Set_Charge_Thresholds.c  ChipControl_Unit.c  MyProjectTests
test/fakes/: fake_LTC2943.c  fake_LTC2943.h
